--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unbuild": "^1.0.1"
   },
   "dependencies": {
+    "chalk": "^5.2.0",
     "inquirer": "^9.1.4",
     "inquirer-file-tree-selection-prompt": "^2.0.5",
     "mysql2": "^2.3.3",
