--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "sequelizemm",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Sequelize Migration script generator using interactive cli",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hasinoorit/sequelizemm.git"
+  },
+  "keywords": [
+    "Sequelize",
+    "Migration",
+    "Orm",
+    "CLI"
+  ],
   "bin": {
     "sequelizemm": "./bin/index.js"
   },
