--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "Orm",
     "CLI"
   ],
+  "license": "MIT",
+  "author": "Md Hashinur Rahman",
   "bin": {
     "sequelizemm": "./bin/index.js"
   },
@@ -40,8 +42,6 @@
   },
   "dependencies": {
     "chalk": "^5.2.0",
-    "inquirer": "^9.1.4",
-    "inquirer-file-tree-selection-prompt": "^2.0.5",
     "prompts": "^2.4.2"
   }
 }
